# GravatarSync

./: .gitignore  Cargo.toml  LICENSE  db.sql  default.avif
src/: default.rs  main.rs  utils.rs
