[package]
name = "gravatar_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"

surf = "2.3.2"

image = { version = "0.25.4", features = ["avif"] }
sha1 = "0.10.6"

chrono = "0.4.38"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-async-std-rustls"] }

tide = "0.16.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"